--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,12 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <verbose>true</verbose>
+          <fork>true</fork>
+          <executable>${JAVA_HOME}/bin/javac</executable>
+          <compilerVersion>1.3</compilerVersion>
         </configuration>
       </plugin>
-  
   </plugins>
   
   </build>
