--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.6.1</version>
         <configuration>
           <verbose>true</verbose>
           <fork>true</fork>
           <executable>${JAVA_HOME}/bin/javac</executable>
-          <compilerVersion>3.1</compilerVersion>
+          <compilerVersion>1.3</compilerVersion>
         </configuration>
       </plugin>
   </plugins>
@@ -38,6 +38,11 @@
   
   
   <dependencies>
+  <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.6.1</version>
+</dependency>
   
   
   <dependency>
