--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
   <artifactId>SkillraryOnlineApp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
    <properties>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
   
   <build>
@@ -24,12 +24,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.8.1</version>
         <configuration>
+        <source>17</source>
+        <target>17</target>
           <verbose>true</verbose>
           <fork>true</fork>
           <executable>${JAVA_HOME}/bin/javac</executable>
-          <compilerVersion>1.3</compilerVersion>
+          
         </configuration>
       </plugin>
   </plugins>
