--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-      
+        <source>1.7</source>
+        <target>1.7</target>
           <verbose>true</verbose>
           <fork>true</fork>
           <executable>${JAVA_HOME}/bin/javac</executable>
